cabal-version: 3.0
name:           putus
version:        0.1.0.2
synopsis:       A haskell frontend framework using ghc wasm js ffi
description:    See https://hackage.haskell.org/package/putus/docs/Putus.html
author:         futu
maintainer:     futu
copyright:      2025 futu
license:        BSD-2-Clause-Patent
license-file:   LICENSE
build-type:     Simple

library
  exposed-modules: Putus
                 , Putus.Core
                 , Putus.Html5
                 , Putus.Utils
                 , Putus.Dom
                 , Putus.JSFFI
  hs-source-dirs:
      src
  ghc-options: -Wall
  build-depends:  base < 5
                , ghc-experimental
                , bytestring
                , mtl
                , unliftio-core
  default-language: GHC2021
